# jelmore

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI-QUICKSTART.md  CLI.md  Dockerfile  GEMINI.md  GOD.md  IMPLEMENTATION_PROGRESS.md  INFRASTRUCTURE-PARALLELIZATION-SUMMARY.md  Makefile  PROVIDER_SYSTEM_SUMMARY.md  README.md  alembic.ini  compose.yml  coverage.xml  docker-compose.yml  memory-bank.md  mise.toml  pyproject.toml  setup.sh  start.sh  test-performance-metrics.json  workflow-integration-mvp.json  workflow-jelmore-integrated.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: parallel-tests.yml
alembic/: env.py
alembic/versions/: 001_initial_migration_sessions_events.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  sessions.py
app/core/: __init__.py  claude_code.py  database.py  logging.py  nats_client.py  redis_client.py
app/models/: __init__.py  session.py
bmad/: config.yaml
docs/: API_INTEGRATION_COMPLETE.md  BLOODBANK-INTEGRATION.md  INTEGRATION-SUMMARY.md  JelmorePerthIntegration.md  PARALLEL-TEST-OPTIMIZATION-SUMMARY.md  PRD.md  Perth.md  SECURITY.md  SECURITY_SETUP.md  SETUP.md  TEST-SCENARIOS.md  bmm-workflow-status.yaml  database.md  kickoff.md  nats_event_system.md  provider_architecture.md  provider_migration_guide.md  session_integration_summary.md  sprint-plan-jelmore-2026-01-29.md  sprint-status.yaml  startup-optimization.md  tech-spec-jelmore-2026-01-27.md
docs/threads/: 01-prompt.md  02-artifact.md
examples/: provider_usage.py
examples/configs/: bug-fix.json  feature-dev.json  pr-review.json
hive/monitor/: README.md  alert_config.json  alert_system.py  integrated_monitor.py  webhook_tracker.py
hive/monitor/log/: logger.py
memory/agents/: README.md
memory/hive-mind/: consolidation-plan.md  consolidation-success.md
memory/sessions/: README.md
monitoring/: pipeline_dashboard.py  pipeline_monitor.py  pipeline_monitor_hub.py
monitoring/alerting/: alert_engine.py
monitoring/dashboards/: bottlenecks.json  pipeline.json  quality.json
monitoring/docs/: monitoring_architecture.md
monitoring/services/: integration_service.py  metrics_service.py
scripts/: check-env.sh  dev.sh  init-db.sql  init_database.py  measure-performance.py  nats_subscriber.py  nats_test_utils.py  seed_data.py  session_launcher.py  start_monitor_hub.sh  start_pipeline_monitor.sh  startup_benchmark.py  test-coverage.sh  test-parallel.sh  test-quick.sh  test_api.py  test_consolidation.py  trello-monitor.sh  trello-report.sh  validate_security.py
src/jelmore/: __init__.py  api.py  config.py  main.py  main_api_integrated.py  main_complete.py  main_updated.py  services.py
src/jelmore/api/: __init__.py  sessions.py  websocket_manager.py
src/jelmore/archive/: main_api_integrated_archived.py  main_complete_archived.py  main_original.py  main_updated_archived.py
src/jelmore/builders/: __init__.py  base.py  factory.py
src/jelmore/cli/: __init__.py  config.py  execute.py  main.py  session.py  status.py
src/jelmore/commands/: __init__.py  base.py
src/jelmore/config/: __init__.py  settings.py
src/jelmore/hooks/: __init__.py  base.py
src/jelmore/infrastructure/: dynamic.yml  redis.conf  traefik.yml
src/jelmore/middleware/: __init__.py  auth.py  logging.py  rate_limiting.py
src/jelmore/models/: __init__.py  commands.py  events.py  session.py  sessions.py
src/jelmore/monitoring/: __init__.py  startup_monitor.py
src/jelmore/providers/: __init__.py  base.py  claude.py  config.py  factory.py  opencode.py
src/jelmore/services/: __init__.py  claude_code.py  database.py  nats.py  nats_monitoring.py  redis.py  session_service.py
src/jelmore/storage/: __init__.py  redis_store.py  session_manager.py
src/jelmore/utils/: __init__.py  logging.py  parallel_init.py
src/tonzies/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_providers.py
tests/integration/: __init__.py  test_complete_api_integration.py  test_nats_integration.py  test_provider_switching.py  test_redis_persistence.py  test_session_lifecycle.py  test_session_service_integration.py
tests/unit/: __init__.py  test_config.py  test_models.py
tests/unit/providers/: test_base_provider.py  test_claude_provider.py  test_opencode_provider.py  test_provider_factory.py
tests/unit/services/: test_claude_code.py
tests/unit/storage/: test_redis_store.py
