[project]
name = "jelmore"
version = "0.1.0"
description = "Claude Code Session Manager - FastAPI service for managing long-lived Claude Code sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "nats-py>=2.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.20",
    "click>=8.0.0",
    "typer>=0.9.0",
    "rich>=10.0.0",
    "shellingham>=1.3.0",
]

[project.scripts]
jelmore = "jelmore.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/jelmore",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--timeout=30",
]
# Test grouping for parallel execution
markers = [
    "unit: Unit tests that run quickly",
    "integration: Integration tests that may be slower", 
    "e2e: End-to-end tests that require full system",
    "slow: Tests that take longer than 5 seconds",
    "redis: Tests requiring Redis connection",
    "nats: Tests requiring NATS connection",
    "database: Tests requiring database connection",
]
# Parallel execution configuration (handled by pytest-xdist)
timeout = 30
timeout_method = "thread"
